--- a/06-jobs-api/jobs-api/package.json
+++ b/06-jobs-api/jobs-api/package.json
@@ -20,6 +20,7 @@
         "http-status-codes": "^2.2.0",
         "joi": "^17.9.2",
         "jsonwebtoken": "^9.0.1",
+        "moment": "^2.29.4",
         "mongoose": "^7.4.0",
         "rate-limiter": "^0.2.0",
         "swagger-ui-express": "^5.0.0",
